if ENABLE_SYSTEMTAP
osd/osd_probes.h: osd/osd_probes.d
	$(DTRACE) -C -h -s $< -o $@
osd/osd_probes.o: osd/osd_probes.d
	$(DTRACE) -C -G -s $< -o $@

OSDPROBELDADD = osd/osd_probes.o
else
OSDPROBELDADD =
endif

libosd_la_SOURCES = \
	osd/PG.cc \
	osd/PGLog.cc \
	osd/ReplicatedPG.cc \
	osd/ReplicatedBackend.cc \
	osd/ECBackend.cc \
	osd/ECMsgTypes.cc \
	osd/ECTransaction.cc \
	osd/PGBackend.cc \
	osd/Ager.cc \
	osd/HitSet.cc \
	osd/OSD.cc \
	osd/OSDCap.cc \
	osd/Watch.cc \
	osd/ClassHandler.cc \
	osd/OpRequest.cc \
	common/TrackedOp.cc \
	osd/SnapMapper.cc \
	osd/osd_types.cc \
	osd/ECUtil.cc \
	objclass/class_api.cc

libosd_la_LIBADD = $(LIBOSDC) $(LIBOS)

if ENABLE_SYSTEMTAP
libosd_la_DEPS = osd/osd_probes.h osd/osd_probes.o
BUILT_SOURCES += osd/osd_probes.h
endif

noinst_LTLIBRARIES += libosd.la

noinst_HEADERS += \
	osd/Ager.h \
	osd/ClassHandler.h \
	osd/HitSet.h \
	osd/OSD.h \
	osd/OSDCap.h \
	osd/OSDMap.h \
	osd/ObjectVersioner.h \
	osd/OpRequest.h \
	osd/SnapMapper.h \
	osd/PG.h \
	osd/PGLog.h \
	osd/ReplicatedPG.h \
	osd/PGBackend.h \
	osd/ReplicatedBackend.h \
	osd/TierAgentState.h \
	osd/ECBackend.h \
	osd/ECUtil.h \
	osd/ECMsgTypes.h \
	osd/ECTransaction.h \
	osd/Watch.h \
	osd/osd_types.h

